fix: tex alignt to center in "show original picture" button

--- a/gem-puzzle/src/css/style.sass
+++ b/gem-puzzle/src/css/style.sass
@@ -664,6 +664,7 @@ $subtitle-font-size: 2.5rem
 .show_picture
     @media screen and (max-width: 501px)
         line-height: 2rem
+        text-align: center
     cursor: pointer
     &:hover
          +colorizedFont 
